# epubAITranslater

./: .gitignore  CONFIG_ANALYSIS.md  CONFIG_README.md  GITHUB_RELEASE_GUIDE.md  GITHUB_RELEASE_UPLOAD_GUIDE_v0.1.1.md  LICENSE  README.md  RELEASE_CHECKLIST.md  RELEASE_NOTES.md  SQLITE_MIGRATION.md  config.yaml  pyproject.toml  style.yaml  termbase.yaml
scripts/: build_installer_simple.ps1  build_windows_client.ps1  build_windows_installer.ps1  build_windows_installer_alt.ps1  generate_fixtures.py  install_innosetup.ps1  installer_launcher.py  launch_gui.py  run_example.ps1  windows_installer.iss
src/epub2zh_faithful/: cli.py  config.py  dom_utils.py  epub_parser.py  epub_writer.py  gui.py  llm_client.py  models.py  pipeline.py  placeholder_codec.py  post_editor.py  qa_checker.py  segmenter.py  termbase_cli.py  termbase_generator.py  terminology.py  tm_store.py  toc_handler.py  utils.py  xhtml_extractor.py  xhtml_rewriter.py
tests/: test_cancellation.py  test_dashscope_mt.py  test_pipeline_fixtures.py  test_placeholder_codec.py  test_style_config.py  test_termbase_generator.py  test_untranslated_detection.py
tests/fixtures/: config.test.yaml  fixture_basic.epub  fixture_basic.expected_checks.json  fixture_code.epub  fixture_code.expected_checks.json  fixture_footnotes.epub  fixture_footnotes.expected_checks.json  fixture_poetry.epub  fixture_poetry.expected_checks.json  fixture_quotes.epub  fixture_quotes.expected_checks.json  fixture_tables.epub  fixture_tables.expected_checks.json
